# Projects

./: lexologicalStrings.cpp
chessEngine/: main.cpp
codeforce/: AandB.cpp  BitwiseReversion.cpp  CircleOfAppleTree.cpp  HiddenKnowledgeOfAncients.cpp  IncreaseOrSmash.cpp  LikeTheBitset.cpp  MEXpartition.cpp  MEXrose.cpp  Pacer.cpp  TheAncientWizardCapes.cpp  beautifulAverage.cpp  beautifulString.cpp  beautifulXOR.cpp  boiler.cpp  distinctElements.cpp  reverseXOR.cpp  test.cpp  waterMagic.cpp
minecraft/: main.py  settings.py
openGL/: build.bat
openGL/HeaderFiles/: EBO.h  VAO.h  VBO.h  shaderClass.h
openGL/ResourceFiles/Shaders/: default.frag  default.vert
openGL/SourceFiles/: EBO.cpp  VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp
openGL/deleteFiles/: CMakeLists.txt
selfLearn/: basketBall.py  boids.py  carimg.py  dino.py  gameOfLife.py  man.py  ppmFile.cpp  raytracer.py  terrainRandom.cpp
selfLearn/ML/: Untitled.ipynb
selfLearn/ML/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
selfLearn/game/: gravityBall.py  raytracer.py
